main service refactoring