@@ -3,7 +3,6 @@ package ru.practicum.ewm.main.request.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.practicum.ewm.main.event.model.Event;
-import ru.practicum.ewm.main.event.repository.EventRepository;
 import ru.practicum.ewm.main.event.service.EventService;
 import ru.practicum.ewm.main.exception.model.ConflictException;
 import ru.practicum.ewm.main.exception.model.NotFoundException;
@@ -12,10 +11,8 @@ import ru.practicum.ewm.main.request.dto.RequestMapper;
 import ru.practicum.ewm.main.request.dto.RequestStatusUpdateRequest;
 import ru.practicum.ewm.main.request.dto.RequestStatusUpdateResponse;
 import ru.practicum.ewm.main.request.model.ParticipationRequest;
-import ru.practicum.ewm.main.request.model.RequestStatus;
 import ru.practicum.ewm.main.request.repository.RequestRepository;
 import ru.practicum.ewm.main.user.model.User;
-import ru.practicum.ewm.main.user.repository.UserRepository;
 import ru.practicum.ewm.main.user.service.UserService;
 
 import java.time.LocalDateTime;
@@ -23,26 +20,21 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
+
+import static ru.practicum.ewm.main.request.model.RequestStatus.*;
 
 @Service
 public class RequestService {
 
     private final RequestRepository requestRepository;
-    private final UserRepository userRepository;
     private final UserService userService;
     private final EventService eventService;
-    private final EventRepository eventRepository;
 
     @Autowired
-    public RequestService(RequestRepository requestRepository,
-                          UserRepository userRepository, UserService userService, EventService eventService,
-                          EventRepository eventRepository) {
+    public RequestService(RequestRepository requestRepository, UserService userService, EventService eventService) {
         this.requestRepository = requestRepository;
-        this.userRepository = userRepository;
         this.userService = userService;
         this.eventService = eventService;
-        this.eventRepository = eventRepository;
     }
 
     public List<RequestDto> getEventRequests(Long userId, Long eventId) {
@@ -53,14 +45,10 @@ public class RequestService {
         }
         List<ParticipationRequest> result = requestRepository.findByEvent(event);
 
-        return result.stream()
-                .map(RequestMapper::fromRequestTpRequestDto)
-                .collect(Collectors.toList());
+        return result.stream().map(RequestMapper::fromRequestTpRequestDto).toList();
     }
 
-    public RequestStatusUpdateResponse updateRequest(Long userId, Long eventId,
-                                                     RequestStatusUpdateRequest request) {
-
+    public RequestStatusUpdateResponse updateRequest(Long userId, Long eventId, RequestStatusUpdateRequest request) {
         userService.getUserIfExist(userId);
         Event event = eventService.getEventIfExist(eventId);
         List<ParticipationRequest> requests = requestRepository.findAllByIdIn(request.getRequestIds());
@@ -68,15 +56,14 @@ public class RequestService {
         Set<RequestDto> rejected = new HashSet<>();
         RequestStatusUpdateResponse result = new RequestStatusUpdateResponse(confirmed, rejected);
         List<ParticipationRequest> pendingRequests = requests.stream()
-                .filter(request1 -> request1.getStatus().equals(RequestStatus.PENDING))
-                .toList();
+                .filter(request1 -> request1.getStatus().equals(PENDING)).toList();
 
         if (pendingRequests.isEmpty()) {
             throw new ConflictException("Запрос не найден");
         }
-        long confirmedRequestsCount = requestRepository.findAllByEventAndStatus(event, RequestStatus.CONFIRMED).size();
+        long confirmedRequestsCount = requestRepository.findAllByEventAndStatus(event, CONFIRMED).size();
         if (!event.getIsModerated() || event.getParticipantLimit() == 0) {
-            requests.forEach(req -> req.setStatus(RequestStatus.CONFIRMED));
+            requests.forEach(req -> req.setStatus(CONFIRMED));
             result.getConfirmedRequests().addAll(requests.stream()
                     .map(RequestMapper::fromRequestTpRequestDto)
                     .toList());
@@ -89,30 +76,28 @@ public class RequestService {
         }
 
         if ((confirmedRequestsCount + request.getRequestIds().size()) == event.getParticipantLimit() &&
-                request.getStatus().equals(RequestStatus.CONFIRMED)) {
-            requests.forEach(req -> req.setStatus(RequestStatus.REJECTED));
-            confirmed.addAll(requests.stream()
-                    .map(RequestMapper::fromRequestTpRequestDto)
-                    .toList());
+                request.getStatus().equals(CONFIRMED)) {
+            requests.forEach(req -> req.setStatus(REJECTED));
+            confirmed.addAll(requests.stream().map(RequestMapper::fromRequestTpRequestDto).toList());
             requestRepository.saveAll(requests);
             result.setConfirmedRequests(confirmed);
 
             List<ParticipationRequest> otherPendingRequests = requestRepository
-                    .findAllByEventAndStatus(event, RequestStatus.PENDING);
-            otherPendingRequests.forEach(req -> req.setStatus(RequestStatus.REJECTED));
+                    .findAllByEventAndStatus(event, PENDING);
+            otherPendingRequests.forEach(req -> req.setStatus(REJECTED));
             requestRepository.saveAll(otherPendingRequests);
             rejected.addAll(otherPendingRequests.stream().map(RequestMapper::fromRequestTpRequestDto).toList());
             result.setRejectedRequests(rejected);
             return result;
         }
 
-        if (request.getStatus().equals(RequestStatus.CONFIRMED)) {
-            requests.forEach(req -> req.setStatus(RequestStatus.CONFIRMED));
+        if (request.getStatus().equals(CONFIRMED)) {
+            requests.forEach(req -> req.setStatus(CONFIRMED));
             confirmed.addAll(requests.stream().map(RequestMapper::fromRequestTpRequestDto).toList());
             requestRepository.saveAll(requests);
             result.setConfirmedRequests(confirmed);
-        } else if (request.getStatus().equals(RequestStatus.REJECTED)) {
-            requests.forEach(req -> req.setStatus(RequestStatus.REJECTED));
+        } else if (request.getStatus().equals(REJECTED)) {
+            requests.forEach(req -> req.setStatus(REJECTED));
             rejected.addAll(requests.stream().map(RequestMapper::fromRequestTpRequestDto).toList());
             requestRepository.saveAll(requests);
             result.setRejectedRequests(rejected);
@@ -124,9 +109,8 @@ public class RequestService {
     public List<RequestDto> getByUserId(Long userId) {
         List<ParticipationRequest> result = requestRepository.findAllByRequester(userService.getUserIfExist(userId));
 
-        return result.stream()
-                .map(RequestMapper::fromRequestTpRequestDto)
-                .collect(Collectors.toList());
+        return result.stream().map(RequestMapper::fromRequestTpRequestDto).toList();
+
     }
 
     public RequestDto create(Long userId, Long eventId) {
@@ -139,7 +123,7 @@ public class RequestService {
             throw new ConflictException("Событие с id " + eventId + " еще не опубликовано");
         }
 
-        long confirmedRequestsCount = requestRepository.findAllByEventAndStatus(event, RequestStatus.CONFIRMED).size();
+        long confirmedRequestsCount = requestRepository.findAllByEventAndStatus(event, CONFIRMED).size();
         if (confirmedRequestsCount == event.getParticipantLimit() && event.getParticipantLimit() > 0) {
             throw new ConflictException(
                     "Лимит участников для события " + event.getId() + " превышен");
@@ -148,13 +132,12 @@ public class RequestService {
             throw new ConflictException("Запрос на участие в событии " + event.getId() +
                     " уже существует для пользователя с id " + user.getId());
         }
-        ParticipationRequest request = new ParticipationRequest(null, LocalDateTime.now(), event, user,
-                RequestStatus.PENDING);
+        ParticipationRequest request = new ParticipationRequest(null, LocalDateTime.now(), event, user, PENDING);
         if (!event.getIsModerated()) {
-            request.setStatus(RequestStatus.CONFIRMED);
+            request.setStatus(CONFIRMED);
         }
         if (event.getParticipantLimit() == 0) {
-            request.setStatus(RequestStatus.CONFIRMED);
+            request.setStatus(CONFIRMED);
         }
         ParticipationRequest result = requestRepository.save(request);
 
@@ -165,11 +148,11 @@ public class RequestService {
         User user = userService.getUserIfExist(userId);
         ParticipationRequest request = requestRepository
                 .findById(requestId)
-                .orElseThrow(() -> new NotFoundException("Request with id=" + requestId + " not exists in the DB"));
+                .orElseThrow(() -> new NotFoundException("Запрос с id=" + requestId + " не существует!"));
         if (!Objects.equals(request.getRequester().getId(), user.getId())) {
-            throw new ConflictException("User with id" + userId + " is not owner for request with id" + requestId);
+            throw new ConflictException("User c id " + userId + " не хозяин для запроса " + requestId);
         }
-        request.setStatus(RequestStatus.CANCELED);
+        request.setStatus(CANCELED);
         ParticipationRequest result = requestRepository.save(request);
 
         return RequestMapper.fromRequestTpRequestDto(result);
